<resources>
    <string name="app_name">Project0_Dona</string>
    <string name="action_settings">Settings</string>
    <string name="Spotify_Streamer">Spotify Streamer</string>
    <string name="Football_Scores">Super Duo: Football Scores</string>
    <string name="Library">Super Duo: Library</string>
    <string name="Build_It_Bigger">Build It Bigger</string>
    <string name="XYZ_Reader">XYZ Reader</string>
    <string name="Capstone">Capstone</string>
</resources>
