<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false"
tools:showIn="@layout/activity_main" tools:context=".MainActivity">
<LinearLayout 
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
 android:orientation="vertical">

        <Button style="@style/myButton"
            android:text="@string/Spotify_Streamer"
           android:onClick="sendMessage"
            />

        <Button style="@style/myButton"
            android:text="@string/Football_Scores"
		 android:onClick="sendMessage"
	/>

        <Button style="@style/myButton"
            android:text="@string/Library"
		 android:onClick="sendMessage"
	/>

        <Button style="@style/myButton"
            android:text="@string/Build_It_Bigger"
		 android:onClick="sendMessage"
	 />

        <Button style="@style/myButton"
            android:text="@string/XYZ_Reader"
		 android:onClick="sendMessage"/>

<Button style="@style/myButton"
            android:text="@string/Capstone"
		 android:onClick="sendMessage"/>
    </LinearLayout>
</ScrollView>